feat(microsoft teams): migrate to java 21; preparing to template generator